# esp32_examples

./: .gitignore  README.md  sdkconfig
FreeRTOS/: CMakeLists.txt  sdkconfig
FreeRTOS/main/: main.c
adc/: CMakeLists.txt  README.md
adc/main/: main.c
ai_chat/: CMakeLists.txt  partitions.csv  sdkconfig
ai_chat/main/: CMakeLists.txt  ir.c  ir.h  main.c  oled.c  sr.c  sr.h  ssd1306.c  ssd1306.h
airkiss/: CMakeLists.txt
airkiss/main/: main.c
ble/gattc/: CMakeLists.txt
ble/gatts/: CMakeLists.txt  sdkconfig
ble/hci/: CMakeLists.txt  sdkconfig
flash/: CMakeLists.txt  partitions.csv  sdkconfig
flash/main/: main.c
gpio/: CMakeLists.txt
gpio/main/: main.c
http/client/: CMakeLists.txt
http/server/: CMakeLists.txt
i2c/: CMakeLists.txt  README.md
i2c/main/: main.c  ssd1306.h
i2s/: CMakeLists.txt
i2s/main/: main.c
ir_rmt/: CMakeLists.txt  gen_local_ota.py  index.html  ota_sign_priv.key  sdkconfig
ir_rmt/main/: CMakeLists.txt  cloud.c  cloud.h  ir.c  ir.h  logSample.c  logSample.h  main.c  netcfg.c  netcfg.h  ota.c  ota.h  tsl.c  tsl.h
matter/lighting-app/: partitions.csv  sdkconfig  sdkconfig.defaults
mbedtls/algorithm/: CMakeLists.txt  sdkconfig
mbedtls/algorithm_v4.0/: sdkconfig
mbedtls/https_client/: CMakeLists.txt
mbedtls/https_server/: CMakeLists.txt
mdns/: CMakeLists.txt  mdns_client.py  mdns_server.py
mdns/main/: CMakeLists.txt  main.c
mqtt/: CMakeLists.txt
nec/: CMakeLists.txt
ntp/: CMakeLists.txt
nvs/: CMakeLists.txt
pwm/: CMakeLists.txt  sdkconfig
spi/: CMakeLists.txt
uart/: CMakeLists.txt  README.md
(+76 files in other folders)
